# Zephyr_2go

./: .gitignore
docs/: power_and_realtime_comparison.md  visualizing_and_debugging_zephyr.md  zephyr_rtos_guide.md
stwinbx1_blinky/: CMakeLists.txt  build.ps1  prj.conf
stwinbx1_blinky/src/: main.c
stwinbx1_producer_consumer/: CMakeLists.txt  build.ps1  prj.conf
stwinbx1_producer_consumer/src/: main.c
